# auimod

./: CMakeLists.txt  README.md  aui.h  auibar.cpp  auibar.h  auibook.cpp  auibook.h  barartmsw.cpp  compat.h  dockart.cpp  floatpane.cpp  framemanager.cpp  framemanager.h  tabart.cpp  tabart.h  tabartgtk.cpp  tabartgtk.h  tabartmsw.cpp  tabmdi.cpp  tabmdi.h
example/: CMakeLists.txt  MyTabArt.cpp  MyTabArt.h  main.cpp
